force-app/main/default/objects/abc_API_Log__c/fields/abc_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>abc_Class_Name__c</fullName>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>