force-app/main/default/objects/abc_API_Log__c/fields/abc_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>abc_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>