force-app/main/default/objects/abc_API_Log__c/fields/abc_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>abc_Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>